✨ Add UserConfigService and fix SQLDelight setup
This commit introduces the UserConfigService and its implementation, along with necessary DI modules and configurations. It includes:

- Creation of UserConfigService interface and UserConfigServiceImpl class
- Addition of serviceModule for dependency injection
- Integration of UserConfigService into the existing module structure
- Implementation of basic CRUD operations for user configuration

--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -43,6 +43,7 @@ dev-sqldelightDriver-android = { module = "app.cash.sqldelight:android-driver", 
 dev-sqldelightDriver-ios = { module = "app.cash.sqldelight:native-driver", version.ref = "sqldelight" }
 dev-sqldelightDriver-jvm = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight" }
 dev-sqldelightDriver-webWorker = { module = "app.cash.sqldelight:web-worker-driver", version.ref = "sqldelight" }
+dev-sqldelightCoroutines = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
 
 # android
 dev-androidx-coreKtx = "androidx.core:core-ktx:1.13.1"
