--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -14,6 +14,7 @@ java = "17"
 agp = "8.2.2" # ! current stuck in 8.2.x due to https://youtrack.jetbrains.com/issue/IDEA-348937
 # also we can't just simply make backend or desktop app to use Java 21 as it breaks the whole project
 compose = "1.6.11"
+essenty = "2.1.0"
 decompose = "3.1.0"
 mvikotlin = "4.1.0"
 koin = "3.6.0-Beta4" # must use at least 3.6.x to make it work with Compose 1.6.x for JS platform
@@ -31,6 +32,7 @@ exposed = "0.52.0"
 dev-serializationJson = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.0"
 dev-kmlogging = "org.lighthousegames:logging:1.5.0"
 dev-coroutinesBom = "org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.8.1"
+dev-essentyLifecycleCoroutines = { module = "com.arkivanov.essenty:lifecycle-coroutines", version.ref = "essenty" }
 dev-decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
 dev-decomposeCompose = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
 dev-mvikotlin = { module = "com.arkivanov.mvikotlin:mvikotlin", version.ref = "mvikotlin" }
