--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -55,18 +55,18 @@ dev-androidx-lifecycleKtx = "androidx.lifecycle:lifecycle-runtime-ktx:2.8.3"
 dev-androidx-activityCompose = "androidx.activity:activity-compose:1.9.0"
 
 # backend
-dev-http4kBom = { module = "org.http4k:http4k-bom", version.ref = "http4k" }
-dev-exposedBom = { module = "org.jetbrains.exposed:exposed-bom", version.ref = "exposed" }
-dev-junitBom = { module = "org.junit:junit-bom", version.ref = "junit" }
-dev-kotestBom = "io.kotest:kotest-bom:5.9.1"
-dev-kotestKoin = "io.kotest.extensions:kotest-extensions-koin:1.3.0"
-dev-mockk = "io.mockk:mockk:1.13.12"
-dev-sqlite = "org.xerial:sqlite-jdbc:3.46.0.0"
-dev-hikari = "com.zaxxer:HikariCP:5.1.0"
-dev-flyway = "org.flywaydb:flyway-core:10.16.0"
-dev-logback = "ch.qos.logback:logback-classic:1.5.6"
-dev-slf4j = "org.slf4j:slf4j-api:2.0.13"
-dev-inlineLogging = "com.github.CXwudi:kotlin-jvm-inline-logging:1.0.1"
+dev-backend-http4kBom = { module = "org.http4k:http4k-bom", version.ref = "http4k" }
+dev-backend-exposedBom = { module = "org.jetbrains.exposed:exposed-bom", version.ref = "exposed" }
+dev-backend-junitBom = { module = "org.junit:junit-bom", version.ref = "junit" }
+dev-backend-kotestBom = "io.kotest:kotest-bom:5.9.1"
+dev-backend-kotestKoin = "io.kotest.extensions:kotest-extensions-koin:1.3.0"
+dev-backend-mockk = "io.mockk:mockk:1.13.12"
+dev-backend-sqlite = "org.xerial:sqlite-jdbc:3.46.0.0"
+dev-backend-hikari = "com.zaxxer:HikariCP:5.1.0"
+dev-backend-flyway = "org.flywaydb:flyway-core:10.16.0"
+dev-backend-logback = "ch.qos.logback:logback-classic:1.5.6"
+dev-backend-slf4j = "org.slf4j:slf4j-api:2.0.13"
+dev-backend-inlineLogging = "com.github.CXwudi:kotlin-jvm-inline-logging:1.0.1"
 
 # plugin dep
 pluginDep-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
