🔧 Add kstore library dependencies
Add kstore and related modules to libs.versions.toml and build.gradle.kts for extended functionality.

--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -21,6 +21,7 @@ koin = "3.6.0-Beta4" # must use at least 3.6.x to make it work with Compose 1.6.
 # otherwise will get "Function 'KoinContext' can not be called: No function found for symbol" error
 # see https://kotlinlang.slack.com/archives/C67HDJZ2N/p1714069454044969
 sqldelight = "2.0.2"
+kstore = "0.8.1"
 
 junit = "5.10.3"
 http4k = "5.26.0.0"
@@ -47,6 +48,9 @@ dev-sqldelightDriver-ios = { module = "app.cash.sqldelight:native-driver", versi
 dev-sqldelightDriver-jvm = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight" }
 dev-sqldelightDriver-webWorker = { module = "app.cash.sqldelight:web-worker-driver", version.ref = "sqldelight" }
 dev-sqldelightCoroutines = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
+dev-kstore = { module = "io.github.xxfast:kstore", version.ref = "kstore" }
+dev-kstore-file = { module = "io.github.xxfast:kstore-file", version.ref = "kstore" }
+dev-kstore-storage = { module = "io.github.xxfast:kstore-storage", version.ref = "kstore" }
 
 # android
 dev-androidx-coreKtx = "androidx.core:core-ktx:1.13.1"
