--- a/conduit-frontend/gradle.properties
+++ b/conduit-frontend/gradle.properties
@@ -1,6 +1,7 @@
 #Gradle
 org.gradle.jvmargs=-Xmx2048M
 org.gradle.caching=true
+org.gradle.parallel=true
 #org.gradle.configuration-cache=true
 
 #Kotlin
