--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -17,7 +17,7 @@ compose = "1.6.11"
 essenty = "2.1.0"
 decompose = "3.1.0"
 mvikotlin = "4.1.0"
-koin = "3.6.0-Beta4" # must use at least 3.6.x to make it work with Compose 1.6.x for JS platform
+koin = "4.0.0-RC1" # must use at least 3.6.x to make it work with Compose 1.6.x for JS platform
 kstore = "0.8.0"
 
 junit = "5.10.3"
