--- a/.github/workflows/decompose-frontend-test.yml
+++ b/.github/workflows/decompose-frontend-test.yml
@@ -23,6 +23,8 @@ jobs:
 
     - name: Set up Chromenium
       uses: browser-actions/setup-chrome@v1
+      with:
+        install-chromedriver: true
 
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
