--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -11,14 +11,13 @@
 [versions]
 kotlin = "2.0.21"
 java = "21"
-agp = "8.7.1" # ! if using Android plugin in IDEA, need to switch to 8.2.x due to https://youtrack.jetbrains.com/issue/IDEA-348937
-# also we can't just simply make backend or desktop app to use Java 21 as it breaks the whole project
+agp = "8.7.1" # ! if using Android plugin in IDEA, need to switch to a version that IDEA supports
 compose = "1.7.0"
 
 essenty = "2.1.0"
 decompose = "3.1.0"
 mvikotlin = "4.2.0"
-koin = "4.0.0" # must use at least 3.6.x to make it work with Compose 1.6.x for JS platform
+koin = "4.0.0"
 kstore = "0.8.0"
 
 junit = "5.11.2"
