:recycle: Refactor frontend dependencies structure
Reorganize frontend-related dependencies under 'dev-frontend' prefix in libs.versions.toml and update corresponding import statements across multiple build.gradle.kts files

--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -30,28 +30,28 @@ exposed = "0.55.0"
 dev-serializationJson = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3"
 dev-kmlogging = "org.lighthousegames:logging:1.5.0"
 dev-coroutinesBom = "org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.9.0"
-
-dev-windowSizeClassMultiplatform = "dev.chrisbanes.material3:material3-window-size-class-multiplatform:0.5.0"
-
-dev-essentyLifecycleCoroutines = { module = "com.arkivanov.essenty:lifecycle-coroutines", version.ref = "essenty" }
-dev-decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
-dev-decomposeCompose = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
-dev-mvikotlin = { module = "com.arkivanov.mvikotlin:mvikotlin", version.ref = "mvikotlin" }
-dev-mvikotlinMain = { module = "com.arkivanov.mvikotlin:mvikotlin-main", version.ref = "mvikotlin" }
-dev-mvikotlinCoroutines = { module = "com.arkivanov.mvikotlin:mvikotlin-extensions-coroutines", version.ref = "mvikotlin" }
-dev-mvikotlinLogging = { module = "com.arkivanov.mvikotlin:mvikotlin-logging", version.ref = "mvikotlin" }
-
 dev-koinBom = { module = "io.insert-koin:koin-bom", version.ref = "koin" }
-dev-kotlinWrapper = "org.jetbrains.kotlin-wrappers:kotlin-wrappers-bom:1.0.0-pre.818"
-dev-kstore = { module = "io.github.xxfast:kstore", version.ref = "kstore" }
-dev-kstore-file = { module = "io.github.xxfast:kstore-file", version.ref = "kstore" }
-dev-kstore-storage = { module = "io.github.xxfast:kstore-storage", version.ref = "kstore" }
+
+dev-frontend-essentyLifecycleCoroutines = { module = "com.arkivanov.essenty:lifecycle-coroutines", version.ref = "essenty" }
+dev-frontend-decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
+dev-frontend-decomposeCompose = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
+dev-frontend-mvikotlin = { module = "com.arkivanov.mvikotlin:mvikotlin", version.ref = "mvikotlin" }
+dev-frontend-mvikotlinMain = { module = "com.arkivanov.mvikotlin:mvikotlin-main", version.ref = "mvikotlin" }
+dev-frontend-mvikotlinCoroutines = { module = "com.arkivanov.mvikotlin:mvikotlin-extensions-coroutines", version.ref = "mvikotlin" }
+dev-frontend-mvikotlinLogging = { module = "com.arkivanov.mvikotlin:mvikotlin-logging", version.ref = "mvikotlin" }
+dev-frontend-kotlinWrapper = "org.jetbrains.kotlin-wrappers:kotlin-wrappers-bom:1.0.0-pre.818"
+
+dev-frontend-rebugger = "io.github.theapache64:rebugger:1.0.0-rc03"
+
+dev-frontend-kstore = { module = "io.github.xxfast:kstore", version.ref = "kstore" }
+dev-frontend-kstore-file = { module = "io.github.xxfast:kstore-file", version.ref = "kstore" }
+dev-frontend-kstore-storage = { module = "io.github.xxfast:kstore-storage", version.ref = "kstore" }
 
 # android
-dev-androidx-coreKtx = "androidx.core:core-ktx:1.13.1"
-dev-androidx-appcompat = "androidx.appcompat:appcompat:1.7.0"
-dev-androidx-lifecycleKtx = "androidx.lifecycle:lifecycle-runtime-ktx:2.8.6"
-dev-androidx-activityCompose = "androidx.activity:activity-compose:1.9.2"
+dev-frontend-androidx-coreKtx = "androidx.core:core-ktx:1.13.1"
+dev-frontend-androidx-appcompat = "androidx.appcompat:appcompat:1.7.0"
+dev-frontend-androidx-lifecycleKtx = "androidx.lifecycle:lifecycle-runtime-ktx:2.8.6"
+dev-frontend-androidx-activityCompose = "androidx.activity:activity-compose:1.9.2"
 
 # backend
 dev-backend-http4kBom = { module = "org.http4k:http4k-bom", version.ref = "http4k" }
