--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -28,7 +28,7 @@ exposed = "0.55.0"
 # dev dep
 # multiplatform
 dev-serializationJson = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3"
-dev-kmlogging = "org.lighthousegames:logging:1.5.0"
+dev-kotlinLogging = "io.github.oshai:kotlin-logging:7.0.0"
 dev-coroutinesBom = "org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.9.0"
 dev-koinBom = { module = "io.insert-koin:koin-bom", version.ref = "koin" }
 
@@ -42,6 +42,7 @@ dev-frontend-mvikotlinLogging = { module = "com.arkivanov.mvikotlin:mvikotlin-lo
 dev-frontend-kotlinWrapper = "org.jetbrains.kotlin-wrappers:kotlin-wrappers-bom:1.0.0-pre.819"
 
 dev-frontend-rebugger = "io.github.theapache64:rebugger:1.0.0-rc03"
+dev-frontend-slf4jAndroid = "uk.uuid.slf4j:slf4j-android:2.0.7-0"
 
 dev-frontend-kstore = { module = "io.github.xxfast:kstore", version.ref = "kstore" }
 dev-frontend-kstore-file = { module = "io.github.xxfast:kstore-file", version.ref = "kstore" }
