--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -14,6 +14,7 @@ ksp = "2.0.21-1.0.25"
 java = "21"
 agp = "8.7.2" # ! if using Android plugin in IDEA, need to switch to a version that IDEA supports
 compose = "1.7.0"
+compose-adaptive = "1.0.0"
 
 essenty = "2.2.1"
 decompose = "3.2.1"
@@ -45,7 +46,10 @@ dev-frontend-mvikotlinCoroutines = { module = "com.arkivanov.mvikotlin:mvikotlin
 dev-frontend-mvikotlinLogging = { module = "com.arkivanov.mvikotlin:mvikotlin-logging", version.ref = "mvikotlin" }
 dev-frontend-kotlinWrapper = "org.jetbrains.kotlin-wrappers:kotlin-wrappers-bom:1.0.0-pre.822"
 
-dev-frontend-rebugger = "io.github.theapache64:rebugger:1.0.0-rc03"
+dev-frontend-compose-adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "compose-adaptive" }
+dev-frontend-compose-adaptiveLayout = { module = "org.jetbrains.compose.material3.adaptive:adaptive-layout", version.ref = "compose-adaptive" }
+dev-frontend-compose-adaptiveNavigation = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation", version.ref = "compose-adaptive" }
+
 dev-frontend-slf4jAndroid = "uk.uuid.slf4j:slf4j-android:2.0.16-0"
 
 dev-frontend-ktorBom = { module = "io.ktor:ktor-bom", version.ref = "ktor" }
