--- a/conduit-frontend/app-android/src/androidMain/AndroidManifest.xml
+++ b/conduit-frontend/app-android/src/androidMain/AndroidManifest.xml
@@ -7,7 +7,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-        android:windowSoftInputMode="adjustResize">
+        android:windowSoftInputMode="adjustResize"
+        android:usesCleartextTraffic="true"
+        >
         <activity
             android:name="MainActivity"
             android:exported="true">
