--- a/conduit-frontend/gradle.properties
+++ b/conduit-frontend/gradle.properties
@@ -1,5 +1,5 @@
 #Gradle
-org.gradle.jvmargs=-Xmx2048M
+org.gradle.jvmargs=-Xmx6G
 org.gradle.caching=true
 org.gradle.parallel=true
 #org.gradle.configuration-cache=true
