--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -22,7 +22,7 @@ mvikotlin = "4.2.0"
 koin = "4.0.0"
 kstore = "0.9.1"
 ktor = "3.0.1"
-ktorfit = "2.1.0"
+ktorfit = "2.2.0"
 
 junit = "5.11.3"
 http4k = "5.33.1.0"
@@ -53,8 +53,8 @@ dev-frontend-compose-adaptiveNavigation = { module = "org.jetbrains.compose.mate
 dev-frontend-slf4jAndroid = "uk.uuid.slf4j:slf4j-android:2.0.16-0"
 
 dev-frontend-ktorBom = { module = "io.ktor:ktor-bom", version.ref = "ktor" }
-dev-frontend-ktorfitLibLight = { module = "de.jensklingenberg.ktorfit:ktorfit-lib-light-ktor-3.0.0", version.ref = "ktorfit" }
-dev-frontend-ktorfitConverter = { module = "de.jensklingenberg.ktorfit:ktorfit-converters-response-ktor-3.0.0", version.ref = "ktorfit" }
+dev-frontend-ktorfitLibLight = { module = "de.jensklingenberg.ktorfit:ktorfit-lib-light", version.ref = "ktorfit" }
+dev-frontend-ktorfitConverter = { module = "de.jensklingenberg.ktorfit:ktorfit-converters-response", version.ref = "ktorfit" }
 dev-frontend-kstore = { module = "io.github.xxfast:kstore", version.ref = "kstore" }
 dev-frontend-kstore-file = { module = "io.github.xxfast:kstore-file", version.ref = "kstore" }
 dev-frontend-kstore-storage = { module = "io.github.xxfast:kstore-storage", version.ref = "kstore" }
