--- a/.github/workflows/decompose-frontend-test.yml
+++ b/.github/workflows/decompose-frontend-test.yml
@@ -34,9 +34,9 @@ jobs:
       run: |
         ./gradlew :frontend-decompose-logic:cleanAllTests :frontend-decompose-logic:check
 
-    - name: Upload test results
+    - name: Upload build results
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: frontend-test-results
-        path: conduit-frontend/frontend-decompose-logic/build/reports/tests/
+        name: frontend-build-results
+        path: conduit-frontend/frontend-decompose-logic/build/reports/
