--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -74,7 +74,7 @@ dev-backend-kotestBom = "io.kotest:kotest-bom:5.9.1"
 dev-backend-kotestKoin = "io.kotest.extensions:kotest-extensions-koin:1.3.0"
 dev-backend-mockk = "io.mockk:mockk:1.13.13"
 dev-backend-hoplite-yaml = "com.sksamuel.hoplite:hoplite-yaml:2.9.0"
-dev-backend-sqlite = "org.xerial:sqlite-jdbc:3.47.1.0"
+dev-backend-postgresql = "org.postgresql:postgresql:42.7.4"
 dev-backend-hikari = "com.zaxxer:HikariCP:6.2.1"
 dev-backend-flyway = "org.flywaydb:flyway-core:11.0.1"
 dev-backend-logback = "ch.qos.logback:logback-classic:1.5.12"
