--- a/conduit-backend/src/main/resources/application.yml
+++ b/conduit-backend/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 port: 8080  # Example value
 db:
-  url: "jdbc:sqlite::memory:"  # Example value
-#  user:  # Optional
-#  password:  # Optional
-  driver: "org.sqlite.JDBC"  # Example value
+  url: "jdbc:postgresql://localhost:5432/conduit-db"  # Example value
+  user: conduit-user
+  password: conduit-password
+  driver: "org.postgresql.Driver"
 cors:
 #  allowedOrigins:
 #  allowedMethods:
