:rocket: Enhance CI workflow for backend and frontend tests
Add PostgreSQL and Redis services, configure database migrations, and limit branch triggers for more efficient and comprehensive testing

--- a/.github/workflows/decompose-frontend-test.yml
+++ b/.github/workflows/decompose-frontend-test.yml
@@ -2,6 +2,9 @@ name: Frontend Decompose Module Tests
 
 on:
   push:
+    branches:
+      - main
+      - 'renovate/**'
     paths:
       - 'conduit-frontend/frontend-decompose-logic/**'
       - 'build-src/**'
