:construction_worker: Add 'master' branch to CI workflow triggers
This change ensures that CI tests run on both 'main' and 'master' branches for backend and frontend components.

--- a/.github/workflows/decompose-frontend-test.yml
+++ b/.github/workflows/decompose-frontend-test.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - master
       - 'renovate/**'
     paths:
       - 'conduit-frontend/frontend-decompose-logic/**'
