--- a/.github/workflows/http4k-backend-test.yml
+++ b/.github/workflows/http4k-backend-test.yml
@@ -28,7 +28,7 @@ jobs:
           POSTGRES_USER: ${DB_USER}
           POSTGRES_PASSWORD: ${DB_PASSWORD}
         options: >-
-          --health-cmd pg_isready
+          --health-cmd "pg_isready -U ${DB_USER} -d ${DB_NAME}"
           --health-interval 3s
           --health-timeout 5s
           --health-retries 5
