--- a/.github/workflows/http4k-backend-test.yml
+++ b/.github/workflows/http4k-backend-test.yml
@@ -75,7 +75,7 @@ jobs:
     - name: Run Backend Tests
       working-directory: conduit-backend
       env:
-        DB__URL: jdbc:postgresql://postgres:5432/${{ env.DB_NAME }}
+        DB__URL: jdbc:postgresql://localhost:5432/${{ env.DB_NAME }}
         DB__USER: ${{ env.DB_USER }}
         DB__PASSWORD: ${{ env.DB_PASSWORD }}
       run: |
