--- a/.github/workflows/http4k-backend-test.yml
+++ b/.github/workflows/http4k-backend-test.yml
@@ -61,13 +61,12 @@ jobs:
         FLYWAY_URL: jdbc:postgresql://postgres:5432/${{ env.DB_NAME }}
         FLYWAY_USER: ${{ env.DB_USER }}
         FLYWAY_PASSWORD: ${{ env.DB_PASSWORD }}
-        FLYWAY_CLEAN_DISABLED: false
         FLYWAY_LOCATIONS: filesystem:/github/workspace/conduit-backend/db-migration/main,filesystem:/github/workspace/conduit-backend/db-migration/test
         # Set container's JAVA_HOME to prevent GitHub Actions from passing its own Java path
         # This ensures the container uses its internal Java installation at /opt/java/openjdk
         JAVA_HOME: /opt/java/openjdk
       with:
-        args: clean migrate
+        args: migrate
 
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
