--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -41,6 +41,7 @@ dev-koinBom = { module = "io.insert-koin:koin-bom", version.ref = "koin" }
 dev-frontend-essentyLifecycleCoroutines = { module = "com.arkivanov.essenty:lifecycle-coroutines", version.ref = "essenty" }
 dev-frontend-decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
 dev-frontend-decomposeCompose = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
+dev-frontend-decomposeComposeExperimental = { module = "com.arkivanov.decompose:extensions-compose-experimental", version.ref = "decompose" }
 dev-frontend-mvikotlin = { module = "com.arkivanov.mvikotlin:mvikotlin", version.ref = "mvikotlin" }
 dev-frontend-mvikotlinMain = { module = "com.arkivanov.mvikotlin:mvikotlin-main", version.ref = "mvikotlin" }
 dev-frontend-mvikotlinCoroutines = { module = "com.arkivanov.mvikotlin:mvikotlin-extensions-coroutines", version.ref = "mvikotlin" }
