fix: Update comment for slf4j-android dependency to clarify debug logging issue

--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -56,7 +56,7 @@ dev-frontend-coil-ktor3 = { module = "io.coil-kt.coil3:coil-network-ktor3", vers
 dev-frontend-coil-cacheControl = { module = "io.coil-kt.coil3:coil-network-cache-control", version.ref = "coil" }
 dev-frontend-coil-svg = { module = "io.coil-kt.coil3:coil-svg", version.ref = "coil" }
 
-dev-frontend-slf4jAndroid = "uk.uuid.slf4j:slf4j-android:2.0.16-0"
+dev-frontend-slf4jAndroid = "uk.uuid.slf4j:slf4j-android:2.0.16-0" # can't make kotlin-logging's android native log works for debug level, slf4j-android still works the best
 
 dev-frontend-ktorBom = { module = "io.ktor:ktor-bom", version.ref = "ktor" }
 dev-frontend-ktorfitLibLight = { module = "de.jensklingenberg.ktorfit:ktorfit-lib-light", version.ref = "ktorfit" }
