--- a/build-src/libs.versions.toml
+++ b/build-src/libs.versions.toml
@@ -82,10 +82,9 @@ dev-backend-mockk = "io.mockk:mockk:1.13.16"
 dev-backend-hoplite-yaml = "com.sksamuel.hoplite:hoplite-yaml:2.9.0"
 dev-backend-postgresql = "org.postgresql:postgresql:42.7.5"
 dev-backend-hikari = "com.zaxxer:HikariCP:6.2.1"
-dev-backend-flyway = "org.flywaydb:flyway-core:11.3.3"
 dev-backend-logback = "ch.qos.logback:logback-classic:1.5.16"
 dev-backend-slf4j = "org.slf4j:slf4j-api:2.0.16"
-dev-backend-inlineLogging = "com.github.CXwudi:kotlin-jvm-inline-logging:1.0.1"
+dev-backend-jwt = "com.auth0:java-jwt:4.5.0"
 
 # plugin dep
 pluginDep-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
