feat: explicitely set ksp.useKSP2 to true
This is a workaround for a potential issue where Ktorfit might not detect KSP2 correctly when using newer KSP versions. Explicitly setting `ksp.useKSP2=true` ensures Ktorfit uses KSP2 as intended.

--- a/conduit-frontend/gradle.properties
+++ b/conduit-frontend/gradle.properties
@@ -8,6 +8,12 @@ org.gradle.parallel=true
 kotlin.code.style=official
 kotlin.native.ignoreDisabledTargets=true
 
+# KSP
+# workaround due to https://github.com/Foso/Ktorfit/issues/850
+# ktorfit only relies on reading "ksp.useKSP2" to know if it should use KSP2 or not, but now by default KSP2 is enabled when using ksp version with "2.x.x"
+# remove this when a release with that commit is released
+ksp.useKSP2=true
+
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
